--- a/Bomberman/Makefile
+++ b/Bomberman/Makefile
@@ -3,14 +3,17 @@ FLAGS=-g -std=c++11
 
 all: Bomberman
 
-Bomberman: Animator.o Bomb.o Game.o Level.o LevelView.o main.o GUI.o PhysicalBody.o PhysicsEngine.o Player.o Ray.o TextureAtlas.o BombManager.o
-	g++ $(FLAGS) *.o -o Bomberman -lsfml-graphics -lsfml-window -lsfml-system
+Bomberman: Animator.o Bomb.o Game.o Level.o LevelView.o main.o GUI.o PhysicalBody.o PhysicsEngine.o Player.o Ray.o TextureAtlas.o BombManager.o Button.o Menu.o Option.o
+	g++ $(FLAGS) *.o -o Bomberman -lsfml-graphics -lsfml-window -lsfml-system -lsfml-audio
 
 Animator.o: Animator.cpp
 	g++ -c $(FLAGS) Animator.cpp
 
 Bomb.o: Bomb.cpp
 	g++ -c $(FLAGS) Bomb.cpp
+
+Button.o: Button.cpp
+	g++ -c $(FLAGS) Button.cpp
 
 Game.o: Game.cpp
 	g++ -c $(FLAGS) Game.cpp
@@ -24,6 +27,9 @@ LevelView.o: LevelView.cpp
 main.o: main.cpp
 	g++ -c $(FLAGS) main.cpp
 
+Menu.o: Menu.cpp
+	g++ -c $(FLAGS) Menu.cpp
+
 PhysicalBody.o: PhysicalBody.cpp
 	g++ -c $(FLAGS) PhysicalBody.cpp
 
@@ -35,6 +41,9 @@ Player.o: Player.cpp
 
 Ray.o: Ray.cpp
 	g++ -c $(FLAGS) Ray.cpp
+
+Option.o: Option.cpp
+	g++ -c $(FLAGS) Option.cpp
 
 TextureAtlas.o: TextureAtlas.cpp
 	g++ -c $(FLAGS) TextureAtlas.cpp
